--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ android {
 
         // Fragment
         implementation 'androidx.fragment:fragment-ktx:1.3.6'
+
+        implementation("androidx.cardview:cardview:1.0.0")
+
     }
 
 kapt {
